---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    var b : boolean\n    var _b := - b\n"
---
"b"@"src/main.t:9..10" [ConstVar(Var, No)]: boolean
"_b"@"src/main.t:29..31" [ConstVar(Var, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:35..36: mismatched types for unary `-`
| note for src/main.t:37..38: this is of type `boolean`
| error for src/main.t:35..36: cannot apply negation to `boolean`
| info: operand must be a number
